feat: Documentacion del proyecto

--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=204.93.216.11
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=wetc93_campbell
-DB_USERNAME=wetc93_usercampb
-DB_PASSWORD=qouvchgwnfpbxkmad7rt
+DB_DATABASE=
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
